--- a/src/components/Global/DropdownSearch/DropdownSearch.module.css
+++ b/src/components/Global/DropdownSearch/DropdownSearch.module.css
@@ -8,14 +8,12 @@
 .dropdown_container {
     position: absolute;
     display: flex;
-
     padding: 4px;
     flex-direction: column;
     border-radius: 4px;
     border: 1px solid var(--dark3, #1e1e24);
     background: var(--dark4, #0e0e14);
-    /* box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.25); */
-    box-shadow: rgba(115, 113, 252, 0.56) 0px 100px 100px 2px;
+    box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.25);
     gap: 8px;
     top: 40px;
     left: 0;
