--- a/src/pages/Trade/TradeCharts/TradeChartsComponents/TimeFrame.module.css
+++ b/src/pages/Trade/TradeCharts/TradeChartsComponents/TimeFrame.module.css
@@ -21,7 +21,6 @@
     line-height: var(--body-lh);
     color: var(--text2);
     text-align: center;
-
     outline: none;
     border: none;
     padding: 1px 8px;
@@ -30,7 +29,7 @@
 
 .active_selected_button:hover,
 .non_active_selected_button:hover {
-    /* background: var(--title-gradient); */
+    background-color: var(--dark3);
     color: var(--text1);
 }
 
@@ -54,7 +53,6 @@
 
 .dropdown_menu {
     width: 100%;
-
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -65,16 +63,12 @@
 .dropdown_wrapper,
 .dropdown_wrapper_active {
     padding: 8px;
-
     position: absolute;
     background: var(--dark2);
-
     border-radius: var(--border-radius);
     box-shadow: 10px 35px 20px rgba(0, 0, 0, 0.5);
     transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
     z-index: 2;
-
     display: flex;
 }
 .dropdown_wrapper_active:after {
@@ -90,7 +84,6 @@
 
 .dropdown_wrapper {
     top: 3px;
-
     opacity: 0;
     pointer-events: none;
     left: 0;
@@ -98,7 +91,6 @@
 
 .dropdown_wrapper_active {
     opacity: 1;
-    /* top: 10px; */
     pointer-events: auto;
     left: 40px;
 }
