--- a/src/pages/Trade/TradeCharts/TradeChartsComponents/VolumeTVLFee.module.css
+++ b/src/pages/Trade/TradeCharts/TradeChartsComponents/VolumeTVLFee.module.css
@@ -25,7 +25,7 @@
 
 .active_selected_button:hover,
 .non_active_selected_button:hover {
-    /* background: var(--title-gradient); */
+    background: var(--dark3);
     color: var(--text1);
 }
 .volume_tvl_container button:focus-visible {
