--- a/src/components/Global/DropdownSearch/DropdownSearch.module.css
+++ b/src/components/Global/DropdownSearch/DropdownSearch.module.css
@@ -44,6 +44,12 @@
     cursor: pointer;
 }
 
+.option_button:hover{
+    border: 1px solid var(--accent, #7371fc);
+    color: var(--accent, #7371fc);
+    transition: all var(--animation-speed) ease-in-out;
+}
+
 .active_option {
     border: 1px solid var(--accent, #7371fc);
     color: var(--accent, #7371fc);
