--- a/src/components/Home/Landing/LandingStyles.module.css
+++ b/src/components/Home/Landing/LandingStyles.module.css
@@ -7,7 +7,19 @@
     --desktop-h2-lh: normal;
     --desktop-p-fs: 2.25rem;
     --desktop-p-lh: normal;
+
+
+    /*  */
+
+    --base-h2-font-size: 72px;
+    --base-p-font-size: 36px;
+    --mockup-width: 1920px;
+    --mockup-height: 1024px;
+    --h2-max-font-size: 100px; /* Adjust as needed */
+    --p-max-font-size: 50px;  /* Adjust as needed */
+
 }
+
 
 /* Containers */
 .hero_container,
@@ -29,6 +41,21 @@
     height: 100%;
 }
 
+.hero_container{
+    position: relative;
+}
+.animated_paths{
+    position: absolute;
+    top: -150px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0; /* Ensure it is behind other content */
+}
+
+.hero_container h2, .hero_container h3, .hero_container p, .hero_container span{
+    z-index: 1;
+}
 .sub_container {
     display: flex;
     flex-direction: column;
@@ -72,6 +99,9 @@
     letter-spacing: -0.72px;
 }
 
+.hero_container p{
+    font-weight: 200;
+}
 .sub_container ul {
     padding-left: 2rem;
 }
@@ -350,3 +380,6 @@
         font-size: 100px;
     }
 }
+
+
+
