--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,8 +1,8 @@
 .container {
     position: relative;
     overflow-y: auto;
-    overscroll-behavior-y: contain;
-    scroll-snap-type: y mandatory;
+    /* overscroll-behavior-y: contain;
+    scroll-snap-type: y mandatory; */
     height: 100vh;
     width: 100vw;
   }
@@ -38,4 +38,14 @@
     cursor: pointer;
     background-color: var(--text3);;
 
+  }
+
+  @media (max-width: 500px) {
+
+    .container{
+
+      
+      overscroll-behavior-y: contain;
+      scroll-snap-type: y mandatory;
+    }
   }
