stub up `Auctions.tsx` page

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -99,7 +99,7 @@ footer {
 }
 
 .swap-body {
-    height: calc(100vh - (var(--footer-height) + 2rem));
+    /* height: calc(100vh - (var(--footer-height) + 2rem)); */
 }
 
 h3:focus-visible,
