--- a/src/components/Home/Landing/LandingStyles.module.css
+++ b/src/components/Home/Landing/LandingStyles.module.css
@@ -110,14 +110,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 8px;
-    margin: 0 auto;
+    justify-content: space-between;
 }
 
 .hero_stats {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    align-items: center;
 }
 
 .hero_heading {
@@ -132,7 +132,7 @@
 }
 
 .hero_stats h2 {
-    font-size: 36px !important;
+    font-size: 26px !important;
 }
 
 .investors_container {
@@ -237,6 +237,15 @@
         margin-left: auto;
         margin-right: auto;
     }
+
+    .hero_stats_container {
+        
+        margin: 0 auto;
+    }
+
+    .hero_stats h2 {
+        font-size: 36px !important;
+    }
 }
 
 @media (min-width: 740px) {
@@ -251,6 +260,8 @@
     .hero_container h2 {
         line-height: normal;
     }
+
+ 
 
     .sub_container p,
     .hero_container p {
@@ -335,6 +346,11 @@
 
     .hero_stats_container {
         gap: 81px;
+    }
+
+    .hero_stats{
+        min-width: 150px;
+        transition: all var(--animation-speed) ease-in-out;
     }
 
     .hero_stats p {
