--- a/src/components/Home/Landing/LandingStyles.module.css
+++ b/src/components/Home/Landing/LandingStyles.module.css
@@ -155,6 +155,13 @@
     margin: 0 auto;
     width: 100%;
 }
+.links_container div:nth-of-type(9)
+{
+
+   grid-column: span 2;
+   width: 100%;
+}
+
 
 .link_card_container {
     display: flex;
@@ -280,6 +287,10 @@
     .link_card_container p {
         font-size: 14px !important;
     }
+
+.link_card_container{
+    overflow: scroll;
+}
 }
 
 @media (max-height: 900px) {
@@ -292,6 +303,8 @@
     .investors_container {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
+
+
 
     .investors_container img:nth-of-type(17) {
         margin-right: 45%;
@@ -365,8 +378,17 @@
     }
 
     .links_container {
-        grid-template-columns: repeat(5, minmax(0, 1fr));
+        grid-template-columns: repeat(4, minmax(0, 1fr));
     }
+
+
+    .links_container div:nth-of-type(9)
+     {
+     
+        grid-column: span 4;
+        width: 100%;
+    }
+
 
 
 }
@@ -382,7 +404,15 @@
     .links_container {
         grid-template-columns: repeat(5, minmax(0, 1fr));
     }
-
+      .links_container div:nth-of-type(6),
+    .links_container div:nth-of-type(7),
+    .links_container div:nth-of-type(8),
+    .links_container div:nth-of-type(9)
+     {
+        margin-left: 45%;
+        grid-column: span 1;
+        width: 100%;
+    }
     .hero_container,
     .sub_container {
         padding: 64px 214px;
