--- a/src/components/Global/PoolCard/PoolCard.module.css
+++ b/src/components/Global/PoolCard/PoolCard.module.css
@@ -3,6 +3,8 @@
     position: relative;
     list-style: none;
     border-radius: var(--border-radius);
+    border: 1px solid transparent;
+    transition: all var(--animation-speed) ease-in-out
 }
 
 .main_container {
@@ -22,7 +24,7 @@
 }
 .pool_card:hover,
 .pool_card:focus-visible {
-    box-shadow: var(--glow-light-box-shadow);
+   border: 1px solid var(--accent1)
 }
 
 .row {
