--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -5,6 +5,9 @@
     scroll-snap-type: y mandatory; */
     height: 100vh;
     width: 100vw;
+    background: radial-gradient(43.75% 50% at 0% 70% , rgba(115, 113, 252, 0.20) 0%, rgba(115, 113, 252, 0.00) 100%) ;
+
+    background-attachment: fixed;
   }
   
   .container::-webkit-scrollbar {
@@ -40,6 +43,7 @@
     background-color: var(--text3);;
 
   }
+
 
   @media (max-height: 715px) {
 .container{
