add hover overlay to trade image

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -67,3 +67,12 @@
     }
   }
 
+
+  @media (min-width: 1600px) {
+    .container {
+
+      overscroll-behavior-y: contain;
+      scroll-snap-type: y mandatory;
+
+    }
+  }
