--- a/src/components/Home/Landing/LandingStyles.module.css
+++ b/src/components/Home/Landing/LandingStyles.module.css
@@ -135,6 +135,33 @@
     font-size: 26px !important;
 }
 
+.trade_image_container{
+    position: relative;
+}
+
+.trade_image_container:hover .trade_image_overlay{
+    opacity: 1;
+}
+
+.trade_image_overlay{
+    width: 100%;
+    height: 100%;
+    background: rgba(6, 6, 12, 0.25);
+
+backdrop-filter: blur(2.5px);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all var(--animation-speed) ease-in-out;
+
+    opacity: 0;
+}
+
 .investors_container {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
