--- a/src/App/futa/CreateField.module.css
+++ b/src/App/futa/CreateField.module.css
@@ -6,15 +6,36 @@
 }
 
 .form_item textarea {
+    padding: 2px 6px;
+    border-radius: 4px;
+    letter-spacing: 1px;
     resize: none;
+    color: var(--text1);
+    background-color: var(--dark3);
+    outline: none;
 }
 
 .form_item_top {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    /* outline: 2px solid red; */
 }
 
-.form_item_input {
-
+.form_item_top label {
+    padding: 0;
+    color: var(--text2);
+    font-size: 12px;
+    /* outline: 1px solid green; */
 }
+
+.counter {
+    color: var(--text3);
+    font-size: 10px;
+    outline: none;
+}
+
+/* .form_item_input {
+
+} */
