fix border and outline on `Create Token` button

--- a/src/App/futa/Create.module.css
+++ b/src/App/futa/Create.module.css
@@ -45,4 +45,9 @@
 .submit_btn {
     border-radius: 4px;
     background: var(--accent3);
+    border: none;
+}
+
+.submit_btn:hover {
+    cursor: pointer;
 }
