fix sluggish animation on chevrons

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -45,6 +45,15 @@
   }
 
 
+  .show_arrow{
+opacity: 1;
+  }
+
+  .disable_arrow{
+    opacity: 0;
+    pointer-events: none;
+  }
+
   @media (max-height: 715px) {
 .container{
   height: auto;
