refactor `CreateField.tsx` to support single-line entry fields

--- a/src/App/futa/Create.module.css
+++ b/src/App/futa/Create.module.css
@@ -2,11 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    /* width: 100%; */
-    height: 100%;
-
-    /* outline: 3px solid yellow; */
+    justify-content: center;
+    height: calc(100vh - 56px);
 }
 
 .go_back {
