--- a/src/App/futa/CreateField.module.css
+++ b/src/App/futa/CreateField.module.css
@@ -5,16 +5,6 @@
     /* outline: 1px solid orange; */
 }
 
-.form_item textarea {
-    padding: 2px 6px;
-    border-radius: 4px;
-    letter-spacing: 1px;
-    resize: none;
-    color: var(--text1);
-    background-color: var(--dark3);
-    outline: none;
-}
-
 .form_item_top {
     display: flex;
     flex-direction: row;
@@ -36,6 +26,13 @@
     outline: none;
 }
 
-/* .form_item_input {
-
-} */
+.text_input {
+    padding: 2px 6px;
+    border-radius: 4px;
+    letter-spacing: 1px;
+    resize: none;
+    color: var(--text1);
+    background-color: var(--dark3);
+    outline: none;
+    border: 1px solid var(--text3);
+}
