refactor currency selector to work omn page

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -23,7 +23,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-    background: transparent; /* opacity: 0; should do the thing either */
+    background: transparent; 
 }
 body::-webkit-scrollbar-thumb {
     background: linear-gradient(
