--- a/src/App/futa/TokenDetails/DetailItems/DetailsContent.module.css
+++ b/src/App/futa/TokenDetails/DetailItems/DetailsContent.module.css
@@ -1,8 +1,8 @@
 .container{
-    padding: 0 16px;
+  
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 8px;  
 }
 
 .token, .subName, .subDetails, .rowLabel, .timeRowValue, .filledValue, .filledValue span, .progressContainer p{
@@ -28,6 +28,7 @@ letter-spacing: -0.4px;
     color: var(--text2, #8B98A5);
     font-size: 14px;
     letter-spacing: -0.28px; 
+    padding-bottom: 1rem;
 }
 
 /* rows */
@@ -103,4 +104,29 @@ color: var(--text2, #8B98A5);
 text-align: right;
 font-size: 14px;
 letter-spacing: -0.28px;
+}
+
+.compactTokenComponent{
+    display: flex;
+    flex-direction: row;
+    gap: 8px
+}
+.imgContainer{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+    border-radius: 8px;
+}
+.compactImg{
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+    border-radius: 8px;
+
+}
+.compactImg img{
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
 }
