--- a/src/App/futa/TokenDetails/TokenDetailsHeader/TokenDetailsHeader.module.css
+++ b/src/App/futa/TokenDetails/TokenDetailsHeader/TokenDetailsHeader.module.css
@@ -4,7 +4,6 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    background-color: red;
 
 }
 
@@ -16,6 +15,11 @@
 
 }
 
+.img_container{
+    width: 100%;
+    height: 100%;
+   overflow: scroll;
+}
 .img_container img{
     max-width: 100%;
     object-fit: contain;
@@ -26,4 +30,20 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+@media only screen and (min-device-width: 768px)  {
+
+    .container{
+    
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+      
+    
+    }
+    
+
+
 }
