--- a/src/App/futa/CreateField.module.css
+++ b/src/App/futa/CreateField.module.css
@@ -26,7 +26,7 @@
     outline: none;
 }
 
-.text_input {
+.text_input, .text_input_disabled {
     padding: 2px 6px;
     width: 100%;
     border-radius: 4px;
@@ -36,4 +36,8 @@
     background-color: var(--dark3);
     outline: none;
     border: 1px solid var(--text3);
+}
+
+.text_input_disabled:hover {
+    cursor: pointer;
 }
