--- a/src/App/futa/TokenDetails/JoinBid/JoinBid.module.css
+++ b/src/App/futa/TokenDetails/JoinBid/JoinBid.module.css
@@ -79,3 +79,48 @@ font-size: 12px;
     font-size: 12px;
 
 }
+.networkFeeContainer{
+    display: flex;
+    padding: 8px;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid var(--dark3);
+    margin: 0 16px;
+    
+}
+.networkFeeRow{
+    width: 100%;
+ display: flex;
+ flex-direction: row;
+ align-items: center; 
+ justify-content: space-between;  
+ padding: 0 8px
+}
+.alignCenter{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+}
+.networkFeeContainer p{
+    color: var(--text2, #8B98A5);
+font-size: 12px;
+
+}
+.actionButton{
+    margin: 0 16px;
+    display: flex;
+    height: 34px;
+    padding: 1px 8px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 4px;
+border: 0.5px solid var(--accent, #0CCDFF);
+background: var(--accent, #0CCDFF);
+outline: none;
+border: none;
+font-size: 24px;
+}
