--- a/src/App/futa/Auctions.module.css
+++ b/src/App/futa/Auctions.module.css
@@ -7,6 +7,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-start;
 }
