--- a/src/App/futa/Auctions.module.css
+++ b/src/App/futa/Auctions.module.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-start;
+    padding: 20px;
 }
